# stakefish-test

./: .env-development  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  index.yaml  pyproject.toml
.github/workflows/: helm-publish.yaml  test-and-build.yaml
helm/: Chart.yaml
helm/stakefish-test/: values.yaml
helm/stakefish-test/templates/: _helpers.tpl  secretstore.yaml  service.yaml
helm/templates/: NOTES.txt  deployment.yaml  externalsecret.yaml  namespace.yaml
src/stakefish_test/: config.py  crud.py  database.py  logger.py  main.py  metrics.py  middleware.py  models.py  routers.py  utils.py
tests/: test_main.py  test_routers.py
